--- a/empleos/templates/perfil/ver_perfil_empresa.html
+++ b/empleos/templates/perfil/ver_perfil_empresa.html
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="panel-interactivo">
+                            <div class="panel-interactivo" data-url="{% url 'gestionar_ofertas' %}">
                                 <div class="icono-grande">
                                     <i class="fas fa-tasks"></i>
                                 </div>
