--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -40,3 +40,37 @@ img.rounded-circle {
     height: 200px;
     object-fit: cover;
 }
+
+/* Se puede omitir este fragmento repitiendo la otra foto de perfil de empresa */
+.profile-pic-container {
+    position: relative;
+    margin: 20px auto;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #444;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border: 2px solid white;
+    cursor: pointer;
+}
+.profile-pic-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: none;
+}
+.profile-pic-container i {
+    font-size: 50px;
+    color: #ccc;
+}
+.profile-pic-container input[type="file"] {
+    position: absolute;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+/*  ---------------------------------------------------------- */
