--- a/empleos/templates/ofertas/crear_oferta.html
+++ b/empleos/templates/ofertas/crear_oferta.html
@@ -53,8 +53,20 @@
                                         {{ form.criterios_inclusion }}
                                     </div>
                                 </div>
+
+                                <div id="preguntas-container">
+                                    <label class="form-label text-white">Ingrese las preguntas que desea que el candidato responda</label>
+                                    <div class="d-flex align-items-center mb-2 requisito-item">
+                                        <input type="text" class="form-control bg-dark text-white me-2 pregunta-input" placeholder="Para una nueva pregunta, clic en +">
+                                        <button type="button" class="btn btn-success btn-add-pregunta">
+                                            <i class="fas fa-plus"></i>
+                                        </button>
+                                    </div>
+                                </div>
+
+                                <input type="hidden" name="preguntas" id="preguntas-json">
                                 
-                                <button type="submit" class="btn btn-outline-light btn-lg w-100">Publicar</button>
+                                <button type="submit" style="margin-top: 30px;" class="btn btn-outline-light btn-lg w-100">Publicar</button>
                             </form>
                         </div>
                     </div>
