Integración de IA

--- a/empleos/templates/perfil/ver_perfil_candidato.html
+++ b/empleos/templates/perfil/ver_perfil_candidato.html
@@ -155,7 +155,7 @@
                     <strong>Comentario de IA</strong>
                 </div>
                 <div class="card-body">
-                    <p>{{ comentario_ia }}</p>
+                    <p>{{ postulacion.analisis_de_ia|default:"No disponible" }}</p>
                 </div>
             </div>
 
